[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/EstaciondeRecarga/EstacionDeRecarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/EstaciondeRecarga/AreaAtracciona.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/SFX/EstacionRecarga01.wav" type="AudioStream" id=3]
[ext_resource path="res://Juego/EstaciondeRecarga/EstacionDeRecarga.gd" type="Script" id=4]
[ext_resource path="res://Juego/SFX/VacioSFX.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/SFX/CargaSFX.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 106.924

[sub_resource type="Animation" id=4]
resource_name = "activado"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.462745 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.462745 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.462745 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.462745 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.462745 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("MotorEstacion")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/4/type = "value"
tracks/4/path = NodePath("MotorEstacion:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MotorEstacion:autoplay")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="EstacionDeRecarga" type="Node2D"]
script = ExtResource( 4 )

[node name="AreaColision" type="Area2D" parent="."]
z_index = 1
collision_layer = 32
collision_mask = 27

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
position = Vector2( 1, -3 )
texture = ExtResource( 1 )
offset = Vector2( 26, -35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 3, -19 )
rotation = 3.14159
scale = Vector2( 2.73125, -2.9271 )
shape = SubResource( 1 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="AnimacionEstaciondeRecarga" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/activado = SubResource( 4 )
anims/default = SubResource( 3 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -7.28
bus = "SFX"

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -11.44
bus = "SFX"

[node name="MotorEstacion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -18.571
bus = "SFX"

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_exited" from="AreaColision" to="." method="_on_AreaColision_body_exited"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
